@@ -125,7 +125,7 @@
         <maven.flatten.file.name>pom-installed.xml</maven.flatten.file.name>
         <maven.model.version>3.8.4</maven.model.version>
         <checkstyle.puppycrawl.version>8.45</checkstyle.puppycrawl.version>
-        <mockito.version>3.4.6</mockito.version>
+        <mockito.version>3.12.4</mockito.version>
         <mysql.connector.version>8.0.30</mysql.connector.version>
         <netlibjava.version>1.1.2</netlibjava.version>
         <oro.bundle.version>2.0.8_6</oro.bundle.version>
@@ -140,7 +140,7 @@
         <snappy.version>1.1.8.4</snappy.version>
         <spring.version>5.2.22.RELEASE</spring.version>
         <storm.version>1.1.1</storm.version>
-        <surefire.version>3.0.0-M4</surefire.version>
+        <surefire.version>3.1.2</surefire.version>
         <tomcat.version>9.0.63</tomcat.version>
         <twitter.hbc.version>2.2.0</twitter.hbc.version>
         <yammer.metrics.annotation.version>2.2.0</yammer.metrics.annotation.version>
@@ -1030,6 +1030,11 @@
                                 --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
                                 --add-opens=java.base/java.math=ALL-UNNAMED
                                 --add-opens=java.sql/java.sql=ALL-UNNAMED
+                                --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+                                --add-opens=java.base/java.time=ALL-UNNAMED
+                                --add-opens=java.base/java.text=ALL-UNNAMED
+                                --add-opens=java.management/sun.management=ALL-UNNAMED
+                                --add-opens java.desktop/java.awt.font=ALL-UNNAMED
                             </argLine>
                         </configuration>
                     </plugin>
